@@ -41,6 +41,8 @@
 -Data export functionality. Numeric for now.
 -Add deltaT export option and save date and time in IS8601 format.
 -Added audio data panel. Support for linear formats currently.
+-Abstract data panel now manages a state variable for subclasses.
+-Added support for playback rate changes in audio data panel.
 
 1.2.0 - June 21, 2005
 -Added command line option (-s or --time-scale) to set the time scale
